@@ -1415,6 +1415,19 @@ struct vki_robust_list_head {
 	struct vki_robust_list __user *list_op_pending;
 };
 
+/* Introduced in linux commit bf69bad38cf63d980e8a603f8d1bd1f85b5ed3d9 */
+struct vki_futex_waitv {
+	__vki_u64 val;
+	__vki_u64 uaddr;
+	__vki_u32 flags;
+	__vki_u32 __reserved;
+};
+
+struct vki__kernel_timespec {
+	long long tv_sec;
+	long long tv_nsec;
+};
+
 //----------------------------------------------------------------------
 // From linux-2.6.8.1/include/linux/errno.h
 //----------------------------------------------------------------------
